--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rmc-dialog",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1-alpha.1",
   "description": "mobile dialog ui component for react",
   "keywords": [
     "react",
@@ -34,7 +34,7 @@
     "watch-tsc": "rc-tools run watch-tsc",
     "build": "rc-tools run build",
     "gh-pages": "rc-tools run gh-pages",
-    "start": "DEMO_ENV=preact rc-tools run server",
+    "start": "rc-tools run server",
     "compile": "rc-tools run compile --babel-runtime",
     "pub": "rc-tools run pub --babel-runtime",
     "lint": "rc-tools run lint --no-js-lint",
