--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rmc-dialog",
-  "version": "0.0.1-alpha.4",
+  "version": "1.0.1",
   "description": "mobile dialog ui component for react",
   "keywords": [
     "react",
