--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "test": "rc-test run test",
     "chrome-test": "rc-test run chrome-test",
     "coverage": "rc-test run coverage",
-    "rn-start": "node node_modules/react-native/local-cli/cli.js start"
+    "rn-start": "node node_modules/react-native/local-cli/cli.js start",
+    "rn-init": "rc-tools run react-native-init"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.32",
