--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "gh-pages": "rc-tools run gh-pages",
     "start": "rc-tools run server",
     "compile": "rc-tools run compile --babel-runtime",
+    "prepublish": "rc-tools run guard",
+    "prepare": "rc-tools run guard",
+    "prepublishOnly": "rc-tools run guard",
     "pub": "rc-tools run pub --babel-runtime",
     "lint": "rc-tools run lint --no-js-lint",
     "karma": "rc-test run karma",
